--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "swapy": "^1.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
   },
